# MathEngineSharedLibrary

./: .gitignore  CMakeLists.txt
src/: HeaderOfConvenience.cpp  HeaderOfConvenience.hpp  Main.cpp
src/Calculator/: Calculator.cpp  Calculator.hpp
src/Constants/: Constant.cpp  Constant.hpp
src/Errors/: Error.cpp  Error.hpp
src/Errors/ShowError/: ShowError.cpp  ShowError.hpp
src/Operators/: IncludeOperators.hpp  Operator.cpp  Operator.hpp
src/Operators/Addition/: Addition.cpp  Addition.hpp
src/Operators/Cosine/: Cosine.cpp  Cosine.hpp
src/Operators/Division/: Division.cpp  Division.hpp
src/Operators/Factorial/: Factorial.cpp  Factorial.hpp
src/Operators/Multiplication/: Multiplication.cpp  Multiplication.hpp
src/Operators/Power/: Power.cpp  Power.hpp
src/Operators/Sign/: Sign.cpp  Sign.hpp
src/Operators/Sine/: Sine.cpp  Sine.hpp
src/Operators/SquareRoot/: SquareRoot.cpp  SquareRoot.hpp
src/Operators/Subtraction/: Subtraction.cpp  Subtraction.hpp
src/Operators/Tangent/: Tangent.cpp  Tangent.hpp
src/Parsing/InfixToRPN/: InfixToRPN.cpp  InfixToRPN.hpp
src/Parsing/InputParser/: InputParser.cpp  InputParser.hpp
src/Parsing/RPNtoBinaryTree/: RPNtoBinaryTree.cpp  RPNtoBinaryTree.hpp
src/Parsing/RuleSets/: IncludeRuleSets.hpp  RuleSet.hpp
src/Parsing/RuleSets/SineSpecialCases/: SineSpecialCases.cpp  SineSpecialCases.hpp
src/TreeNodes/: TreeNode.cpp  TreeNode.hpp
